# qml-playground

./: .gitignore  README.md
Circular Progress Bar/: CMakeLists.txt
circular-progress-bar/App/: CMakeLists.txt  CircularProgressBar.qml  Main.qml  README.md  main.cpp
coin-flip/App/: CMakeLists.txt  Main.qml  README.md  main.cpp
